upgrade xdagj-crypto to 0.1.2